# webGis

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE.md  BUGS.md  DESIGN.md  Dockerfile  EXTENSION_GUIDE.md  PRODUCT_DOCUMENTATION.md  README.md  ROADMAP.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  产品蓝图.md  项目流程.md
.github/workflows/: ci.yml
docs/: deployment.md
e2e/: main-flow.spec.ts  test-data.geojson
schemas/: ast-schema.json
scripts/: generate-prompt.mjs  generate-rust.mjs  generate-types.mjs  generate-zod.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-wasm/: Cargo.toml
src-wasm/pkg/: geosurgical_wasm.d.ts  geosurgical_wasm.js  geosurgical_wasm_bg.wasm  geosurgical_wasm_bg.wasm.d.ts  package.json
src-wasm/src/: dispatcher.rs  lib.rs  metadata.rs  types.rs
src-wasm/src/dispatcher/: export.rs  input.rs  preview.rs  util.rs
src-wasm/src/dispatcher/ops/: attributes.rs  crs.rs  geometry.rs  mod.rs
src/components/: AppShell.tsx  AstPreview.tsx  AttributeTable.tsx  BatchPanel.tsx  CommandPalette.tsx  Dropzone.tsx  ErrorBoundary.tsx  ErrorCallout.tsx  HistoryPanel.tsx  LayerItem.tsx  LayerTree.tsx  MapPreview.tsx  MetadataPanel.tsx  ProgressTimeline.tsx  ResultPanel.tsx  ShortcutTags.tsx  UndoStatus.tsx
src/hooks/: useBatchProcessor.ts  useGeoSurgicalWorker.ts
test-data/: sample.geojson
(+37 files in other folders)
