[package]
name = "geosurgical-webgis-desktop"
version = "0.1.0"
description = "GeoSurgical WebGIS desktop shell"
authors = ["GeoSurgical"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
